# bazel_rust_monorepo

./: .bazelrc  .gitignore  BUILD  Cargo.toml  WORKSPACE.bazel
cmd/show-latest-release/: BUILD.bazel  Cargo.toml
cmd/show-latest-release/src/: main.rs
rust/github/: BUILD.bazel  Cargo.toml
rust/github/src/: lib.rs
rust/github/tests/: integration_test.rs
