workspace(name = "bazel_rust_monorepo")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_rust",
    sha256 = "0cc7e6b39e492710b819e00d48f2210ae626b717a3ab96e048c43ab57e61d204",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_rust/releases/download/0.10.0/rules_rust-v0.10.0.tar.gz",
        "https://github.com/bazelbuild/rules_rust/releases/download/0.10.0/rules_rust-v0.10.0.tar.gz",
    ],
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    edition = "2021",
    version = "1.64.0",
)

load("@rules_rust//crate_universe:defs.bzl", "crates_repository")

crates_repository(
    name = "crate_index",
    # CargoのLockファイルへのパス
    cargo_lockfile = "//:Cargo.lock",
    # bazelが管理するLockファイル、まだ存在しない
    lockfile = "//:Cargo.Bazel.lock",
    # 実在するCargo.tomlへのパス
    manifests = [
        "//:Cargo.toml",
        "//cmd/show-latest-release:Cargo.toml"
    ],
    rust_version = "1.64.0",
)

load("@crate_index//:defs.bzl", "crate_repositories")

crate_repositories()

