workspace(name = "bazel_rust_monorepo")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_rust",
    sha256 = "0cc7e6b39e492710b819e00d48f2210ae626b717a3ab96e048c43ab57e61d204",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_rust/releases/download/0.10.0/rules_rust-v0.10.0.tar.gz",
        "https://github.com/bazelbuild/rules_rust/releases/download/0.10.0/rules_rust-v0.10.0.tar.gz",
    ],
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains", "rust_analyzer_toolchain_repository")

rules_rust_dependencies()

rust_register_toolchains(
    edition = "2021",
    version = "1.63.0",
)

register_toolchains(rust_analyzer_toolchain_repository(
    name = "rust_analyzer_toolchain",
    version = "1.63.0",
))

load("@rules_rust//tools/rust_analyzer:deps.bzl", "rust_analyzer_dependencies")

rust_analyzer_dependencies()

load("@rules_rust//crate_universe:defs.bzl", "crates_repository", "crate")

crates_repository(
    name = "crate_index",
    lockfile = "//:Cargo.Bazel.lock",
    cargo_lockfile = "//:Cargo.lock",
    packages = {
        "tokio": crate.spec(
            version = "1.21.2",
            features = ["full"],
        ),
        "reqwest": crate.spec(
            version = "0.11.12",
            features = ["json"],
        ),
        "serde": crate.spec(
            version = "1.0.145",
            features = ["derive"],
        ),
        "wiremock": crate.spec(
            version = "0.5.14",
        ),
        "thiserror": crate.spec(
            version = "1.0.37",
        ),
        "anyhow": crate.spec(
            version = "1.0.65",
        ),
    },
    rust_version = "1.63.0",
)

load("@crate_index//:defs.bzl", "crate_repositories")

crate_repositories()

