[package]
name = "show-latest-release"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.85" }
tokio = { version = "1.21.2", features = ["full"] }
anyhow = { version = "1.0.65" }
