[package]
name = "show-latest-release"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github = { path = "../../rust/github" }
tokio = { version = "1.21.2", features = ["full"] }
anyhow = { version = "1.0.65" }
