load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test", "rust_test_suite")

package(default_visibility = ["//visibility:public"])

normal_depends = [
    "@crate_index//:serde",
    "@crate_index//:thiserror",
    "@crate_index//:reqwest",
]

dev_depends = [
    "@crate_index//:tokio",
    "@crate_index//:wiremock",
]

rust_library(
    name = "github",
    srcs = glob(["src/**/*.rs"]),
    deps = normal_depends,
)

rust_test(
    name = "github_test",
    crate = ":github",
    deps = normal_depends + dev_depends,
)

rust_test_suite(
    name = "github_test_suite",
    srcs = glob(["tests/**/*.rs"]),
    deps = [":github"] + dev_depends,
)
